--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
                 <img src="imgs/img33.png" height="100%">
                 <h1>ABOUT BRAND</h1>
                 <p>
-                    In 2015, **********, known as "coach", tried to do a trick 
-                    called a Perekydnyi. At first it didn't come out, but when 
-                    ******** praised it and it started to come out. 
-                    In 2024, he decided to make his own brand of alcohol 
-                    "PEREKIDNYY"
+                    Text Filler Text Filler Text Filler Text Filler Text Filler 
+                                    Text Filler Text Filler Text Filler Text Filler Text Filler
                 </p>
             </div>
             <div id="coctails" class="right2">
@@ -98,11 +95,7 @@
                         © 2024 Perekydnyi Properties, Inc.  
                         All rights reserved. All other trademarks and trade 
                         names are properties of their respective owners.
-                        TO FIND OUT MORE ABOUT RESPONSIBLE CONSUMPTION, VISIT 
-                        <a href="http://responsibility.org/">RESPONSIBILITY.ORG</a> AND 
-                        <a href="http://ourthinkingaboutdrinking.com/">OURTHINKINGABOUTDRINKING.COM</a>
-                        Please do not share or forward with anyone under the 
-                        legal drinking age.
+                        
                     </p>
                 </div>
             </div>
